# kirinuki

./: .env.example  .gitignore  README.md  kirinuki.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.kiro/specs/archive-clip-suggester/: design.md  requirements.md  research.md  (+2 more)
.kiro/steering/: product.md  structure.md  tech.md
hooks/: hook-sqlite_vec.py
src/kirinuki/: __init__.py
tests/: test_clip_models.py  test_clip_progress_models.py  test_models.py  test_multi_clip_margin_validation.py  test_multi_clip_models.py  test_recommendation_models.py
tests/cli/: test_clip_cmd.py  test_commands.py  test_cookie.py  test_cookie_integration.py  test_migrate_cmd.py  test_progress_renderer.py  test_resolve_channel_id.py  test_suggest_cmd.py  test_tui_adapter.py  test_tui_executor.py
tests/core/: test_channel_service.py  test_clip_errors.py  test_clip_filename.py  test_clip_service.py  test_clip_service_margin.py  test_clip_service_progress.py  test_clip_utils.py  test_cookie_service.py  test_datetime_prefix.py  test_formatter.py  test_parallel_segmentation.py  test_resolve_video_id.py  test_search_service.py  test_segment_extractor.py  test_segmentation_service.py  test_suggest_service.py  test_sync_service.py
tests/infra/: test_database.py  test_db.py  test_embedding.py  test_ffmpeg.py  test_llm.py  test_llm_evaluate.py  test_llm_parallel.py  test_ytdlp.py  test_ytdlp_download.py  test_ytdlp_progress.py
tests/integration/: test_database_integration.py  test_default_channel.py  test_e2e_pipeline.py  test_suggest_flow.py
(+153 files in other folders)
