[project]
name = "kirinuki"
version = "0.1.0"
description = "YouTube Live配信アーカイブの字幕蓄積・話題セグメンテーション・横断検索CLIツール"
readme = "README.md"
authors = [
    { name = "ayapi", email = "colors.aya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "yt-dlp>=2024.0",
    "anthropic>=0.49",
    "openai>=1.0",
    "sqlite-vec>=0.1",
]

[project.scripts]
kirinuki = "kirinuki.cli.main:cli"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
